--- a/deploy/about.html
+++ b/deploy/about.html
@@ -29,7 +29,7 @@
         </section>
   
         <section id="burger-container">
-           <svg xmlns="http://www.w3.org/2000/svg" width="65px" height="50px" viewBox="0 0 65 50" id="burger">
+           <svg xmlns="http://www.w3.org/2000/svg" width="65px" height="50px" viewBox="0 0 65 60" id="burger">
               <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                  <g id="lines" fill="#000">
                     <path id="bottom-line" d="M5 38h55v6H5z" class="lines" />
@@ -94,7 +94,7 @@
       
       <section class="grid-container content-spacing" id="about-slides">
           <div>
-              <div class="my-slider">
+              <div class="my-slider slides">
                   <div><img src="img/slides/slide1.jpg" alt="slide 1"></div>
                   <div><img src="img/slides/slide2.jpg" alt="slide 2"></div>
                   <div><img src="img/slides/slide3.jpg" alt="slide 3"></div>
@@ -165,7 +165,7 @@
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Greensock -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.1/gsap.min.js"></script>
   <!-- FancyBox -->
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <!-- tinyslider -->
